@@ -557,6 +557,7 @@ wxGTK:
 
 wxMSW:
 
+- Fix setting colours for the text part of wxComboBox (Igor Korot).
 - Add support for CURRENCY and SCODE types to OLE Automation helpers (PB).
 - Allow setting LCID used by wxAutomationObject (PB).
 - Fix calling Iconize(false) on hidden top level windows (Christian Walther).
